--- a/.azure-pipelines/templates/copy-and-build.yml
+++ b/.azure-pipelines/templates/copy-and-build.yml
@@ -8,12 +8,12 @@ steps:
   inputs:
     SourceFolder: '$(Agent.TempDirectory)'
     Contents: '**'
-    TargetFolder: '$(Agent.BuildDirectory)/Drop/'
+    TargetFolder: '$(DROP_PATH)/'
 
 - task: Gradle@2
   inputs:
-    gradleWrapperFile: $(Agent.BuildDirectory)/Drop/gradlew
-    workingDirectory: '$(Agent.BuildDirectory)/Drop/'
+    gradleWrapperFile: $(DROP_PATH)/gradlew
+    workingDirectory: '$(DROP_PATH)/'
     options: '-x jar -x javadoc -x javadocJar -x compileJava -x processResources -x classes -x sourceJar'
     tasks: ${{ parameters.task }}
     publishJUnitResults: true
