--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -32,6 +32,9 @@ pr:
 pool:
   vmImage: windows-latest
 
+variables: 
+  DROP_PATH: '$(Agent.BuildDirectory)/Drop'
+
 stages:
 - stage: Build
   jobs:
@@ -57,11 +60,14 @@ stages:
       deploy:
         steps:
         - template: templates/download-artifacts.yml
+          parameters:
+            directoryPath: $(DROP_PATH)
         - template: templates/install-java.yml
         - template: templates/secure-files.yml
         - template: templates/copy-and-build.yml
           parameters:
             task: 'publishSnapshotPublicationToSonatypeSnapshotRepository'
+            directoryPath: $(DROP_PATH)
 
 - stage: Maven_Release_And_Github_Release
   dependsOn: []
@@ -76,6 +82,8 @@ stages:
       deploy:
         steps:
         - template: templates/download-artifacts.yml
+          parameters:
+            directoryPath: $(DROP_PATH)
         - template: templates/install-java.yml
         - template: templates/secure-files.yml
           parameters:
@@ -83,6 +91,7 @@ stages:
         - template: templates/copy-and-build.yml
           parameters:
             task: 'publishMavenCentralReleasePublicationToSonatypeRepository'
+            directoryPath: $(DROP_PATH)
 
   - deployment: Github_Release
     dependsOn: Maven_Release
@@ -94,6 +103,9 @@ stages:
       deploy:
         steps: 
         - template: templates/download-artifacts.yml
+          parameters:
+            directoryPath: $(DROP_PATH)
         - template: templates/version-and-release.yml
           parameters:
             gitConnection: 'microsoftgraphrelease'
+            directoryPath: $(DROP_PATH)
