--- a/.azure-pipelines/templates/download-artifacts.yml
+++ b/.azure-pipelines/templates/download-artifacts.yml
@@ -1,10 +1,14 @@
+parameters:
+- name: directoryPath
+  type: string
+
 steps:
   - download: none
   - task: DownloadPipelineArtifact@2
     inputs:
       source: current
       artifact: Drop
-      path: '$(DROP_PATH)/'
+      path: '${{ parameters.directoryPath }}/'
       patterns: |
         **
         *
