--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -64,7 +64,7 @@ stages:
             task: 'publishSnapshotPublicationToSonatypeSnapshotRepository'
 
 - stage: Maven_Release_And_Github_Release
-  dependsOn: []
+  dependsOn: Build
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   jobs:
   - deployment: Maven_Release
