--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -4,10 +4,21 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: [ dev, master ]
   pull_request:
-    branches: [ dev, master ]
+    branches: [ dev, master ] 
+    paths-ignore:
+      - .gradle/wrapper
+      - .gitignore
+      - CONTRIBUTING.md
+      - LICENSE
+      - THIRD PARTY NOTICES
+      - gradle.properties
+      - gradlew
+      - gradlew.bat
+      - readme.md
+      - settings.gradle
+      - Scripts/*
+      
 
 jobs:
   build:
