--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -18,18 +18,22 @@ on:
       - readme.md
       - settings.gradle
       - Scripts/*
+  workflow_dispatch:
+    inputs:
+      purpose: 
+        description: 'Purpose of Build'
+        required: false
+        default: 'Test'
       
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v2
     - name: Easy detect-secrets
       uses: RobertFischer/detect-secrets-action@v2.0.0
-    - name: Set up JDK 11
+    - name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
         java-version: '16'
