--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.4
       with:
-        name: my-artifact
+        name: drop
         path: |
           **/libs/*
           build/generated-pom.xml
