--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -10,30 +10,20 @@ on:
       - 'src/*'
       - '!.gradle/wrapper'
       - '!.gitignore'
-      - '!CONTRIBUTING.md'
       - '!LICENSE'
       - '!THIRD PARTY NOTICES'
-      - '!gradle.properties'
-      - '!gradlew'
-      - '!gradlew.bat'
-      - '!readme.md'
-      - '!settings.gradle'
-      - '!Scripts/*'
+      - '!*.md'
+      - '*.gradle'
   pull_request:
     branches: [ dev, master ] 
     paths:
       - 'src/*'
       - '!.gradle/wrapper'
       - '!.gitignore'
-      - '!CONTRIBUTING.md'
       - '!LICENSE'
       - '!THIRD PARTY NOTICES'
-      - '!gradle.properties'
-      - '!gradlew'
-      - '!gradlew.bat'
-      - '!readme.md'
-      - '!settings.gradle'
-      - '!Scripts/*'  
+      - '!*.md'
+      - '*.gradle'  
   workflow_dispatch:
     inputs:
       purpose: 
