--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -7,20 +7,16 @@ on:
   pull_request:
     branches: [ dev, master ] 
     paths:
-      - 'src/*'
+      - 'src/**'
+      - '.github/**'
       - '!.gradle/wrapper'
       - '!.gitignore'
       - '!LICENSE'
       - '!THIRD PARTY NOTICES'
       - '!*.md'
       - '*.gradle'  
-  workflow_dispatch:
-    inputs:
-      purpose: 
-        description: 'Purpose of Build'
-        required: false
-        default: 'Test'
-      
+  workflow_dispatch: 
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -34,14 +30,16 @@ jobs:
           java-version: '16'
           distribution: 'adopt'
           cache: gradle
-
-      ##Copy the Step below for the other files with the appropriate values
-      - run: .\scripts\decodeAndWrite.ps1 -encodedValue $ENCODED_VALUE -outputPath $OUTPUT_PATH
+      - run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
         shell: pwsh
         env: 
-          ENCODED_VALUE: ""
-          OUPUT_PATH: ""   
-
+          ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
+          OUPUT_PATH: .\local.properties
+      - run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
+        shell: pwsh
+        env: 
+          ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
+          OUPUT_PATH: .\secring.gpg
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
