--- a/gradle.properties
+++ b/gradle.properties
@@ -34,7 +34,7 @@ mavenArtifactSuffix =
 #ex: C:\Users\username\.gradle\gradle.properties
 ClientId="CLIENT_ID"
 Username="USERNAME"
-Password="PASSWORD"
+#Password="PASSWORD"
 
 #enable mavenCentralPublishingEnabled to publish to maven central
 mavenCentralSnapshotArtifactSuffix = -SNAPSHOT
