--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -4,19 +4,19 @@
 name: Java CI with Gradle
 
 on:
-  workflow_dispatch:
   pull_request:
     branches: [ dev, master ] 
     paths:
-      - 'src/*'
-      - '.github/*'
+      - 'src/**'
+      - '.github/**'
       - '!.gradle/wrapper'
       - '!.gitignore'
       - '!LICENSE'
       - '!THIRD PARTY NOTICES'
       - '!*.md'
       - '*.gradle'  
-     
+  workflow_dispatch: 
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
