--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -22,12 +22,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      #- name: Easy detect-secrets
-      #  uses: RobertFischer/detect-secrets-action@v2.0.0
-      - name: Perform Scan
-        uses: ShiftLeftSecurity/scan-action@master
+      - name: Run Yelp's detect-secrets
+        uses: RobertFischer/detect-secrets-action@v2.0.0
+      - name: Commit back .secrets.baseline (if it was missing)
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          type: "credscan,java,depscan"
+          commit_message: "build(detect-secrets): Commit the newly-generated .secrets.baseline file"
       - name: Set up JDK 16
         uses: actions/setup-java@v2
         with:
