--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -100,9 +100,13 @@ jobs:
           name: drop
           path: drop        
       - name: Github Release
-        uses: elgohr/Github-Release-Action@v3.1
+        uses: anton-yurchenko/git-release@v4.1
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          DRAFT_RELEASE: "false"
+          PRE_RELEASE: "false"
+          CHANGELOG_FILE: "CHANGELOG.md"
+          ALLOW_EMPTY_CHANGELOG: "true"
         with:
-          args: MS-Graph-SDK-Java-Core Release
-
+          args: |
+              current/working/directory/drop/**
