--- a/.github/workflows/git-release.yml
+++ b/.github/workflows/git-release.yml
@@ -13,6 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Download Build Artifact
+        uses: dawidd6/action-download-artifact@v2.14.1
+        with:
+          workflow: build-and-publish.yml
+          workflow_conclusion: success
+          branch: dev
+          event: push
+          name: drop
       - name: Github Release
         uses: anton-yurchenko/git-release@v4.1
         env:
