attempt to fix versionScript
attempt to fix versionScript 8

attempt to fix versionScript 9

attempt to fix versionScript 10

attempt to fix versionScript 11

attempt to fix versionScript 12

attempt to fix versionScript 13

attempt to fix versionScript 14

attempt to fix versionScript 16

--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -50,14 +50,24 @@ jobs:
             **/gradle/**
             Scripts/**
   getTag:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
       RELEASE_TAG: ""
-      LOCATION: .\gradle.properties
     steps:
       - uses: actions/checkout@v2
       - name: Get Version
-        run: .\scripts\getLatestVersion.ps1
+        run: |
+          $propertiesPath = ".\gradle.properties"
+          $file = get-item $propertiesPath
+          $findVersions = $file | Select-String -Pattern "mavenMajorVersion" -Context 0,2
+          $findVersions = $findVersions -split "`r`n"
+          $versionIndex = $findVersions[0].IndexOf("=")
+          $majorVersion = $findVersions[0].Substring($versionIndex+2)
+          $minorVersion = $findVersions[1].Substring($versionIndex+2)
+          $patchVersion = $findVersions[2].Substring($versionIndex+2)
+          $version = "$majorVersion.$minorVersion.$patchVersion"
+          echo $version
+          echo "RELEASE_TAG=HELLO" >> $GITHUB_ENV
         shell: pwsh
       - name: Test Print
-        run: echo $RELEASE_TAG
+        run: echo "${{ env.RELEASE_TAG }}"
