--- a/.github/workflows/git-release.yml
+++ b/.github/workflows/git-release.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           workflow: build-and-publish.yml
           workflow_conclusion: success
-          branch: dev
+          branch: master
           event: push
           name: drop
       - name: Github Release
