--- a/.github/workflows/git-release.yml
+++ b/.github/workflows/git-release.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Git Release
 
 on:
@@ -18,7 +16,7 @@ jobs:
         with:
           workflow: build-and-publish.yml
           workflow_conclusion: success
-          branch: dev
+          branch: master
           event: push
           name: drop
       - name: Github Release
