--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -109,4 +109,5 @@ jobs:
       - name: Create tag
         uses: rickstaa/action-create-tag@v1.2.0
         with:
-          tag: ${{ env.RELEASE_TAG }}
+          tag: "v$RELEASE_TAG"
+          
