--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -98,16 +98,17 @@ jobs:
   
   create_Tag:
     needs: maven_Release
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     env:
       RELEASE_TAG: ""
     steps:
       - uses: actions/checkout@v2
       - name: Get Version
+        id: GetVersion
         run: .\scripts\getLatestVersion.ps1
         shell: pwsh
       - name: Create tag
         uses: rickstaa/action-create-tag@v1.2.0
         with:
-          tag: "v$RELEASE_TAG"
+          tag: ${{ steps.GetVersion.outputs.tag }}
           
