--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -111,4 +111,10 @@ jobs:
         uses: rickstaa/action-create-tag@v1.2.0
         with:
           tag: ${{ steps.GetVersion.outputs.tag }}
+      - name: Queue Git Release
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: Git Release
+          token: ${{ secrets.PERSONAL_TOKEN }}
+
           
