--- a/.github/workflows/git-release.yml
+++ b/.github/workflows/git-release.yml
@@ -19,6 +19,7 @@ jobs:
           branch: master
           event: push
           name: drop
+          path: drop
       - name: Github Release
         uses: anton-yurchenko/git-release@v4.1
         env:
