--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,13 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id 'jacoco'
-    id 'com.github.spotbugs' version '4.7.6'
+    id 'com.github.spotbugs' version '4.8.0'
     id "org.sonarqube" version "3.3"
+}
+
+dependencies {
+    compileOnly 'net.jcip:jcip-annotations:1.0'
+    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.5.1'
 }
 
 java {
