--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,16 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+- package-ecosystem: gradle
+  directory: "/samples/deviceCodeSample"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
+- package-ecosystem: gradle
+  directory: "/samples/interactiveBrowserSample"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
 - package-ecosystem: maven
   directory: "/"
   schedule:
