--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -11,4 +11,9 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.9'
     api 'com.azure:azure-core:1.24.0'
+
+    compileOnly 'net.jcip:jcip-annotations:1.0'
+    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.5.1'
+    testCompileOnly 'net.jcip:jcip-annotations:1.0'
+    testCompileOnly 'com.github.spotbugs:spotbugs-annotations:4.5.1'
 }
