Dependency Updates and Kotlin Error Handling
Update Dependencies
Kotlin error handling
Kotlin error suppress

--- a/.github/workflows/api-level-lint.yml
+++ b/.github/workflows/api-level-lint.yml
@@ -6,10 +6,12 @@ on:
     branches:
       - dev
       - master
+      - v3/longTermBranch
   pull_request:
     branches:
       - dev
       - master
+      - v3/longTermBranch
 
 jobs:
   lint-api-level:
