--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,10 +3,10 @@ name: "CodeQL"
 on:
   workflow_dispatch:
   push:
-    branches: [dev, master]
+    branches: [dev, master, v3/longTermBranch]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [dev]
+    branches: [dev, v3/longTermBranch]
   schedule:
     - cron: '0 1 * * 4'
 
