--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,11 +5,12 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
 
     dependencies {
         classpath "com.gradle:gradle-enterprise-gradle-plugin:3.11.1"
-        classpath "com.android.tools.build:gradle:7.2.2"
+        classpath "com.android.tools.build:gradle:7.3.0"
         classpath "com.github.ben-manes:gradle-versions-plugin:0.42.0"
     }
 }
@@ -17,6 +18,7 @@ buildscript {
 repositories {
     google()
     gradlePluginPortal()
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 apply plugin: "com.android.library"
