--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>annotations</artifactId>
-            <version>3.0.1</version>
-            <scope>test</scope>
+            <groupId>com.github.spotbug</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <version>4.7.2</version>
         </dependency>
     </dependencies>
 </project>
