--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.spotbug</groupId>
+            <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
             <version>4.7.2</version>
         </dependency>
