--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -12,13 +12,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     api 'com.azure:azure-core:1.32.0'
-    api 'com.squareup.okhttp3:okhttp:4.9.0'
+    api 'com.squareup.okhttp3:okhttp:4.10.0'
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-//    api 'com.microsoft.kiota:microsoft-kiota-abstractions:0.0.8-SNAPSHOT'
-//    api 'com.microsoft.kiota:microsoft-kiota-authentication-azure:0.0.4-SNAPSHOT'
-//    api 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.0.8-SNAPSHOT'
-//    api 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.0.4-SNAPSHOT'
-//    api 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.0.4-SNAPSHOT'
+    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-authentication-azure:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.4.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-form:0.4.2'
 }
